--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="selected_item_color">#30d1d5</color>
-    <color name="colorPrimary">#444153</color>
-    <color name="colorPrimaryDark">#383547</color>
+    <color name="colorPrimary">#292824</color>
+    <color name="colorPrimaryDark">#39392F</color>
     <color name="textColorPrimary">#FFFFFF</color>
     <color name="windowBackground">#FFFFFF</color>
-    <color name="navigationBarColor">#000000</color>
+    <color name="navigationBarColor">#292824</color>
     <color name="colorAccent">#FF80AB</color>
 </resources>
+
+<!-- 444153
+   383547-->
